crates/unshackled-tui/tests/snapshots/render__full_layout_snapshot.snap
---
source: crates/unshackled-tui/tests/render.rs
assertion_line: 63
expression: "render_string(&base(), 90, 18)"
---
┌Unshackled──────────────────────────────────────────────────────────────────────────────┐
│Unshackled v0.1.0 | local/test-model | ws:demo | session:ab12cd                         │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌transcript──────────────────────────────────────────────────────────────────────────────┐
│ you: summarize the parser                                                              │
│ assistant: The parser reports precise errors.                                          │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌input  (Enter sends · Alt+Enter, Ctrl+J, or trailing \ make a newline)──────────────────┐
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
mode:agent profile:default tok in/out:120/48 24 t/s ctx:1200/8000
