crates/unshackled-tui/tests/snapshots/render__streaming_turn_snapshot.snap
---
source: crates/unshackled-tui/tests/render.rs
assertion_line: 70
expression: "render_string(&state, 90, 18)"
---
┌Unshackled──────────────────────────────────────────────────────────────────────────────┐
│Unshackled v0.1.0 | local/test-model | ws:demo | session:ab12cd                         │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌transcript──────────────────────────────────────────────────────────────────────────────┐
│ you: summarize the parser                                                              │
│ assistant: The parser reports precise errors.                                          │
│assistant: Streaming the answer live...                                                 │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌input  (Enter to send · Ctrl+J for newline)─────────────────────────────────────────────┐
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
mode:agent profile:default tok in/out:120/48 24 t/s ctx:1200/8000
