crates/unshackled-tui/tests/snapshots/render__thinking_panel_on_does_not_occlude_the_footer.snap
---
source: crates/unshackled-tui/tests/render.rs
expression: rendered
---
┌Unshackled──────────────────────────────────────────────────────────────────────────────┐
│Unshackled v0.1.0 | local/test-model | ws:demo | session:ab12cd                         │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌transcript────────────────────────────────────────────────┐┌thinking────────────────────┐
│ you: summarize the parser                                ││considering the edge cases  │
│ assistant: The parser reports precise errors.            ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
│                                                          ││                            │
└──────────────────────────────────────────────────────────┘└────────────────────────────┘
┌input  (Enter sends · trailing \, Ctrl+J, or Shift+Enter make a newline)────────────────┐
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
mode:agent profile:default tok in/out:120/48 24 t/s ctx:1200/8000
